# platypos

./: Cargo.toml  README.md
contrib/: logo-lowres.txt  logo.txt
db/: Cargo.toml
db/src/: args.rs  db.rs  depends.rs  errors.rs  lib.rs  main.rs  pkginfo.rs  srcinfo.rs
db/src/ops/: make.rs
os/: .gitignore
os/arch-install-scripts/: .SRCINFO  PKGBUILD
os/arti/: .SRCINFO  PKGBUILD
os/audit/: .SRCINFO  PKGBUILD
os/autoconf/: .SRCINFO  PKGBUILD
os/autoconf-archive/: .SRCINFO  PKGBUILD
os/automake/: .SRCINFO  PKGBUILD
os/base/: .SRCINFO  PKGBUILD
os/bash/: .SRCINFO  PKGBUILD
os/bash-completion/: PKGBUILD
os/binutils/: .SRCINFO  PKGBUILD
os/bison/: PKGBUILD
os/capnproto/: .SRCINFO  PKGBUILD
os/cargo-c/: .SRCINFO  PKGBUILD
os/cmake/: .SRCINFO  PKGBUILD
os/coreutils-uutils/: .SRCINFO  PKGBUILD  disable_selinux.patch
os/cppdap/: .SRCINFO  PKGBUILD
os/curl/: .SRCINFO  PKGBUILD
os/db5.3/: .SRCINFO  PKGBUILD
os/debugedit/: .SRCINFO  PKGBUILD
os/elfutils/: .SRCINFO  PKGBUILD
os/fakeroot/: .SRCINFO  PKGBUILD
os/file/: .SRCINFO  PKGBUILD
os/filesystem/: PKGBUILD
os/flex/: .SRCINFO  PKGBUILD
os/gettext/: .SRCINFO  PKGBUILD
os/git/: .SRCINFO  PKGBUILD
os/glibc/: .SRCINFO  PKGBUILD
os/gnupg/: .SRCINFO  PKGBUILD
os/help2man/: .SRCINFO  PKGBUILD
os/jq/: .SRCINFO  PKGBUILD
os/jsoncpp/: .SRCINFO  PKGBUILD
os/kbd/: .SRCINFO  PKGBUILD
os/libarchive/: .SRCINFO  PKGBUILD
os/m4/: .SRCINFO  (+1 more)
web/: Cargo.toml
web/src/: args.rs  assets.rs  html.rs  main.rs
web/templates/: base.html.hbs  index.html.hbs  pkg.html.hbs  style.css
(+75 files in other folders)
