[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "color", "humantime"] }
flate2 = "1.1.1"
log = "0.4.27"
ruzstd = "0.8.1"
sha2 = "0.10.9"
tar = { version = "0.4.44", default-features = false }
