[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
db = {path = "../db"}
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "color", "humantime"] }
handlebars = { version = "6.3.2", features = ["rust-embed"] }
log = "0.4.27"
rust-embed = "8.7.2"
serde = "1.0.219"
serde_json = "1.0.140"
